add jvm tensor (1)